# ltr-lowrank-sdp

./: .gitignore  README.md  benchmark.py  infer.py  pyproject.toml  train.py  tune.py
benchmarks/: README.md
dataset/: loader.py  processor.py  run_lorads.sh  run_parser.sh
hallar/py/: MSS_SDP.py  README.md  create_graphs.py  hlr.py  main.py  utils.py
hallar/src/: LICENSE  README.md
hallar/src/examples/: hybrid_hslr_format_v2.hslr  matrix_completion_1.dat-s  matrix_completion_2.dat-s  options.cfg  suggested_trace_bounds.txt  thetafun_d12.hslr  thetafun_d4.hslr  thetafun_d8.hslr  thetafun_d8_r10.hslr  toy_hybrid_single_block.dat-s
lorads/: README.md
lorads/data/: env.jl  gen_MatrixCompletion.jl  gen_MaxCut.jl
lorads/data/General_SDP/: checker_1.5.dat-s  cphil12.dat-s  ice_2.0.dat-s  p_auss2_3.0.dat-s  shmup4.dat-s
lorads/data/Matrix_Completion_SDP/: MC_500.dat-s
lorads/data/Max_cut_SDP/: G11.dat-s  G12.dat-s  G13.dat-s
lorads/data/Max_cut_matrix_files/: amazon0302.mat  delaunay_n14.dat-s  p2p-Gnutella05.mat  rgg_n_2_15_s0.mat  vsp_befref_fxm_2_4_air02.mat
lorads/data/gen_data/: Manifest.toml  Project.toml
lorads/scripts/: demo.ipynb  run.ipynb
lorads/src/src_semi/: lorads.h  lorads_logging.c  lorads_logging.h  lorads_utils.c  lorads_utils.h  main.c
lorads/src/src_semi/data/: def_lorads_elements.h  def_lorads_lbfgs.h  def_lorads_lp_conic.h  def_lorads_lp_data.h  def_lorads_sdp_conic.h  def_lorads_sdp_data.h  def_lorads_solver.h  lorads_elements.c  lorads_elements.h  lorads_lp_conic.c  lorads_lp_conic.h  (+8 more)
model/: __init__.py  layers.py  net.py
(+22 files in other folders)
