[project]
name = "ltr-lowrank-sdp"
version = "0.1.0"
description = "Implementation for `Learning to Rank: GNNs for Accelerating Low-Rank SDP Solvers`"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "torch_geometric==2.7.0",
    "pyg-lib==0.5.0; sys_platform == 'linux'",
    "scipy==1.16.3",
    "torch-cluster==1.6.3",
    "torch-scatter==2.1.2",
    "torch-sparse==0.6.18",
    "torch-spline-conv==1.2.2",
    "networkx>=3.5",
    "matplotlib>=3.10.7",
    "optuna>=4.6.0",
]

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.8.0+cpu.html",
    "https://data.pyg.org/whl/torch-2.8.0+cu128.html",
]

[tool.uv.extra-build-dependencies]
pyg_lib = ["torch"]
torch_scatter = ["torch"]
torch_sparse = ["torch"]
torch_cluster = ["torch"]
torch_spline_conv = ["torch"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
